// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matchRoute parses url into segments and param map given url ["","items","2345"] 1`] = `
Object {
  "params": Object {
    "id": "2345",
  },
  "route": Object {
    "params": Object {
      ":id": "",
    },
    "path": "items/:id",
    "segments": Array [
      "items",
      ":id",
    ],
  },
}
`;

exports[`matchRoute parses url into segments and param map given url [""] 1`] = `
Object {
  "params": Object {},
  "route": undefined,
}
`;

exports[`matchRoute parses url into segments and param map given url ["/"] 1`] = `
Object {
  "params": Object {},
  "route": Object {
    "params": Object {},
    "path": "",
    "segments": Array [
      "",
    ],
  },
}
`;

exports[`matchRoute parses url into segments and param map given url ["items","2345"] 1`] = `
Object {
  "params": Object {
    "id": "2345",
  },
  "route": Object {
    "params": Object {
      ":id": "",
    },
    "path": "items/:id",
    "segments": Array [
      "items",
      ":id",
    ],
  },
}
`;

exports[`matchRoute parses url into segments and param map given url ["items"] 1`] = `
Object {
  "params": Object {},
  "route": undefined,
}
`;

exports[`matchRoute parses url into segments and param map given url ["items/"] 1`] = `
Object {
  "params": Object {},
  "route": undefined,
}
`;
